# mbs

./: .gitignore  .gitlab-ci.yml  AndroidCustomFirmware.md  README.md  build.gradle  build_on_linux.sh  gitlab-ci.sh  gradle.properties  gradlew  gradlew.bat  import-summary.txt  local.properties.template  settings.gradle
module_multimedia/: .gitignore  CMakeLists.txt  build.gradle
module_multimedia/scripts/: avalon_deps.json  configure.bat  configure.sh  gen_jni_head.bat  gen_jni_head.sh  gen_local_properties.sh  make.bat  make.sh
module_multimedia/src/androidTest/java/sanp/avalon/libs/: ExampleInstrumentedTest.java
module_multimedia/src/androidTest/java/sanp/javalon/libs/: ExampleInstrumentedTest.java
module_multimedia/src/main/: AndroidManifest.xml
module_multimedia/src/main/cpp/: sanp_javalon_network_protocol_RTMPBandwidthTest.cpp  sanp_javalon_network_protocol_RTMPPushClient.cpp  sanp_javalon_network_protocol_RTSPClient.cpp
module_multimedia/src/main/java/android/net/: IpConfiguration.java  StaticIpConfiguration.java
module_multimedia/src/main/java/sanp/: InitMultimedia.java
module_multimedia/src/main/java/sanp/avalon/libs/: SimpleTesting.java
module_multimedia/src/main/java/sanp/avalon/libs/base/: SimpleTesting.java  Tuple.java  Tuple3.java
module_multimedia/src/main/java/sanp/javalon/media/audio/: AudioCapturer.java  AudioDecoder.java  AudioEncoder.java  AudioPlayTesting.java  G711.java  PCMWave.java
module_multimedia/src/main/java/sanp/javalon/media/base/: AVChannel.java  AVDefines.java  AVPacket.java  AudioInfo.java  MediaInfo.java  VideoInfo.java
module_multimedia/src/main/java/sanp/mpx/: IOEngine.java  MediaController.java  MediaEngine.java  ScaledDrawable2d.java  ScreenLayout.java  TextureMovieEncoder2.java  VideoSourceUtils.java
module_multimedia/src/main/java/sanp/mpx/gles/: Drawable2d.java  EglCore.java  EglSurfaceBase.java  FlatShadedProgram.java  FullFrameRect.java  GeneratedTexture.java  GlUtil.java  OffscreenSurface.java  Sprite2d.java  Texture2dProgram.java  WindowSurface.java
module_multimedia/src/main/java/sanp/mpx/mc/: IOEngine.java  MediaController.java  MediaEngine.java  ScreenLayout.java  TextureMovieEncoder2.java
module_multimedia/src/main/java/sanp/test/: AudioResearch.java  MediaTesting.java  SimpleTesting.java
module_multimedia/src/main/res/raw/: speed0_h264_idx  speed0_h264_sps
module_multimedia/src/main/res/values/: dimens.xml  style.xml
module_multimedia/src/test/java/sanp/avalon/libs/: ExampleUnitTest.java
module_multimedia/src/test/java/sanp/javalon/libs/: ExampleUnitTest.java
(+811 files in other folders)
